# cairo-mutate

./: .gitignore  LICENSE  README.md  mutate.py  pyproject.toml
demo_staking_protocol/: Scarb.toml  snfoundry.toml
demo_staking_protocol/src/: lib.cairo  stake_vault.cairo  vault.cairo
demo_staking_protocol/tests/: test_stake_vault.cairo  test_vault.cairo
mutators/: __init__.py  as_flip.py  as_rem.py  common.py  op_ari.py  op_asg.py  op_eq.py
