[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairo-mutate"
version = "0.1.0"
description = "Mutation testing for Starknet/Cairo contracts"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
cairo-mutate = "mutate:main"

[tool.setuptools]
py-modules = ["mutate"]

[tool.setuptools.packages.find]
include = ["mutators*"]
