[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairo-mutate"
version = "0.1.2"
description = "Mutation testing for Starknet/Cairo contracts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.scripts]
cairo-mutate = "mutate:main"

[tool.setuptools]
py-modules = ["mutate"]

[tool.setuptools.packages.find]
include = ["mutators*"]
